--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'realm-android'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
-
+    compileOptions.incremental = false
     defaultConfig {
         applicationId "com.app.test.airbnb"
         minSdkVersion 17
@@ -39,8 +39,7 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:8.5.1'
     apt 'com.jakewharton:butterknife-compiler:8.5.1'
-    apt 'com.google.dagger:dagger-compiler:2.9'
-    compile 'com.google.dagger:dagger:2.9'
+
 
 
     compile 'io.reactivex:rxandroid:1.0.1'
@@ -49,6 +48,7 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
 
 
 }
