--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app.test.airbnb">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".Airbnb"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".Airbnb"
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.LoginActivity"
@@ -23,6 +25,10 @@
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.AccommodationActivity"
+            android:label="@string/title_activity_accommodation"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
