--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,10 @@ dependencies {
     compile 'com.google.maps.android:android-maps-utils:0.5'
     compile 'com.google.code.gson:gson:2.8.0'
 
+    compile 'com.facebook.android:facebook-android-sdk:4.20.0'
+
     compile 'com.jakewharton:butterknife:8.5.1'
     apt 'com.jakewharton:butterknife-compiler:8.5.1'
-
 
 
     compile 'io.reactivex:rxandroid:1.0.1'
