--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCiK_2ka16emMCTIJHpA_MDklGwkz7p0do" />
 
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id_FB"/>
+
         <activity
             android:name=".activities.LoginActivity"
             android:screenOrientation="portrait">
